--- a/mods/redres/chrome/ingame-infostats.yaml
+++ b/mods/redres/chrome/ingame-infostats.yaml
@@ -81,6 +81,12 @@ Container@SKIRMISH_STATS:
 							X: 10
 							Width: 150
 							Height: 25
+						ClientTooltipRegion@CLIENT_REGION:
+							TooltipContainer: TOOLTIP_CONTAINER
+							Template: INGAME_CLIENT_TOOLTIP
+							X: 10
+							Width: 150
+							Height: 25
 						Image@FACTIONFLAG:
 							X: 159
 							Y: 6
@@ -88,11 +94,11 @@ Container@SKIRMISH_STATS:
 							Height: 16
 						Label@FACTION:
 							X: 195
-							Width: 40
+							Width: 65
 							Height: 25
 						Label@TEAM:
-							X: 240
-							Width: 70
+							X: 260
+							Width: 50
 							Height: 25
 							Align: Center
 						Label@KILLS:
@@ -105,4 +111,3 @@ Container@SKIRMISH_STATS:
 							Width: 70
 							Height: 25
 							Align: Center
-
