--- a/mods/redres/mod.yaml
+++ b/mods/redres/mod.yaml
@@ -12,7 +12,6 @@ Folders:
 	./mods/redres
 	./mods/redres/bits
 	./mods/redres/bits/temperate
-	./mods/redres/bits/sounds
 	./mods/redres/uibits
 	~^Content/redres
 	~^Content/yr
@@ -20,95 +19,95 @@ Folders:
 	~^Content/ts
 
 MapFolders:
-	./mods/redres/maps: System
-	~^maps/redres: User
+	./mods/redres/maps@System
+	~^maps/redres@User
 
 Packages:
 # Red-Resurrection
-	rr_voxels.mix:CRC32
-	rr_shp.mix:CRC32
-#	audio01.bag:CRC32
-	redrestheme.mix:CRC32
+	rr_voxels.mix@CRC32
+	rr_shp.mix@CRC32
+#	audio01.bag@CRC32
+	redrestheme.mix@CRC32
 # Yuri's Revenge
-	expandmd01.mix:CRC32
-	~ra2md.mix:CRC32
-	~langmd.mix:CRC32
-	~multimd.mix:CRC32
-	audiomd.mix:CRC32
-	cachemd.mix:CRC32
-	cameomd.mix:CRC32
-	conqmd.mix:CRC32
-	des.mix:CRC32
-	desert.mix:CRC32
-	genermd.mix:CRC32
-	isodes.mix:CRC32
-	isodesmd.mix:CRC32
-	isogenmd.mix:CRC32
-	isolun.mix:CRC32
-	isolunmd.mix:CRC32
-	isosnomd.mix:CRC32
-	isotemmd.mix:CRC32
-	isoubn.mix:CRC32
-	isoubnmd.mix:CRC32
-	isourbmd.mix:CRC32
-	~loadmd.mix:CRC32
-	localmd.mix:CRC32
-	lun.mix:CRC32
-	lunar.mix:CRC32
-	~ntrlmd.mix:CRC32
-	snowmd.mix:CRC32
-	~thememd.mix:CRC32
-	ubn.mix:CRC32
-	urbann.mix:CRC32
+	expandmd01.mix@CRC32
+	~ra2md.mix@CRC32
+	~langmd.mix@CRC32
+	~multimd.mix@CRC32
+	audiomd.mix@CRC32
+	cachemd.mix@CRC32
+	cameomd.mix@CRC32
+	conqmd.mix@CRC32
+	des.mix@CRC32
+	desert.mix@CRC32
+	genermd.mix@CRC32
+	isodes.mix@CRC32
+	isodesmd.mix@CRC32
+	isogenmd.mix@CRC32
+	isolun.mix@CRC32
+	isolunmd.mix@CRC32
+	isosnomd.mix@CRC32
+	isotemmd.mix@CRC32
+	isoubn.mix@CRC32
+	isoubnmd.mix@CRC32
+	isourbmd.mix@CRC32
+	~loadmd.mix@CRC32
+	localmd.mix@CRC32
+	lun.mix@CRC32
+	lunar.mix@CRC32
+	~ntrlmd.mix@CRC32
+	snowmd.mix@CRC32
+	~thememd.mix@CRC32
+	ubn.mix@CRC32
+	urbann.mix@CRC32
 # Red Alert 2
-	~ra2.mix:CRC32
-	~language.mix:CRC32
-	~multi.mix:CRC32
-	audio.mix:CRC32
-	cache.mix:CRC32
-	cameo.mix:CRC32
-	conquer.mix:CRC32
-	generic.mix:CRC32
-	isogen.mix:CRC32
-	isosnow.mix:CRC32
-	isotemp.mix:CRC32
-	isourb.mix:CRC32
-	~load.mix:CRC32
-	local.mix:CRC32
-	~neutral.mix:CRC32
-	sidec01.mix:CRC32
-	sidec02.mix:CRC32
-	sno.mix:CRC32
-	snow.mix:CRC32
-	tem.mix:CRC32
-	temperat.mix:CRC32
-	~theme.mix:CRC32
-	urb.mix:CRC32
-	urban.mix:CRC32
-	audio.bag:CRC32
+	~ra2.mix@CRC32
+	~language.mix@CRC32
+	~multi.mix@CRC32
+	#audio.bag@CRC32
+	audio.mix@CRC32
+	cache.mix@CRC32
+	cameo.mix@CRC32
+	conquer.mix@CRC32
+	generic.mix@CRC32
+	isogen.mix@CRC32
+	isosnow.mix@CRC32
+	isotemp.mix@CRC32
+	isourb.mix@CRC32
+	~load.mix@CRC32
+	local.mix@CRC32
+	~neutral.mix@CRC32
+	sidec01.mix@CRC32
+	sidec02.mix@CRC32
+	sno.mix@CRC32
+	snow.mix@CRC32
+	tem.mix@CRC32
+	temperat.mix@CRC32
+	~theme.mix@CRC32
+	urb.mix@CRC32
+	urban.mix@CRC32
 # Tiberian Sun
-	~sidenc01.mix:CRC32
-	~sidenc02.mix:CRC32
-	~gmenu.mix:CRC32
-	~e01scd01.mix:CRC32
-	~e01scd02.mix:CRC32
-	~maps01.mix:CRC32
-	~maps02.mix:CRC32
-	~movies01.mix:CRC32
-	~movies02.mix:CRC32
-	~patch.mix:CRC32
-	~tibsun.mix:CRC32
-	sounds.mix:CRC32
-	speech01.mix:CRC32 # EVA
-	speech02.mix:CRC32 # Cabal
+	~sidenc01.mix@CRC32
+	~sidenc02.mix@CRC32
+	~gmenu.mix@CRC32
+	~e01scd01.mix@CRC32
+	~e01scd02.mix@CRC32
+	~maps01.mix@CRC32
+	~maps02.mix@CRC32
+	~movies01.mix@CRC32
+	~movies02.mix@CRC32
+	~patch.mix@CRC32
+	~tibsun.mix@CRC32
+	sounds.mix@CRC32
+	speech01.mix@CRC32
+	speech02.mix@CRC32
 # Firestorm
-	~expand01.mix:CRC32
-	~sounds01.mix:CRC32
-	~e01sc01.mix:CRC32
-	~e01sc02.mix:CRC32
-	~e01vox01.mix:CRC32
-	~e01vox02.mix:CRC32
-	~ecache01.mix:CRC32
+	~expand01.mix@CRC32
+	~sounds01.mix@CRC32
+	~e01sc01.mix@CRC32
+	~e01sc02.mix@CRC32
+	~e01vox01.mix@CRC32
+	~e01vox02.mix@CRC32
+	~ecache01.mix@CRC32
 
 Rules:
 	./mods/redres/rules/ai.yaml
@@ -292,6 +291,8 @@ Fonts:
 		Size:10
 
 SupportsMapsFrom: redres
+
+SoundFormats: Aud, Wav
 
 SpriteFormats: ShpTS, TmpTS, ShpTD
 
